# OOP-APP

./: .gitignore  LICENSE  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  build.md  index.html  package-lock.json  package.json  run_e2e_tests.js  update_exercises.js  vite.config.ts
.agents/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md
.agents/auditor_milestone_a/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/challenger_milestone_a_1/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  challenge.md  handoff.md  progress.md
.agents/challenger_milestone_a_2/: README.md
.agents/explorer_milestone_a_1/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  analysis.md  handoff.md  progress.md
.agents/explorer_milestone_a_2/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  analysis.md  handoff.md  progress.md
.agents/explorer_milestone_a_3/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  analysis.md  handoff.md  progress.md
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/reviewer_milestone_a_1/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md  review.md
.agents/reviewer_milestone_a_2/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  handoff.md  progress.md  review.md
.agents/reviewer_milestone_a_3/: BRIEFING.md  ORIGINAL_REQUEST.md  README.md  progress.md
.agents/reviewer_milestone_a_4/: BRIEFING.md  (+3 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: code_runner.rs  lib.rs  main.rs  pdf_parser.rs
(+85 files in other folders)
