[package]
name = "oop_academy"
version = "0.1.3"
edition = "2021"
default-run = "oop_academy"

[lib]
name = "oop_academy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdf-extract = "0.7"
lopdf = "0.34"
tempfile = "3"
regex = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
